Alteração no flex-shrink no style.css Alteração no paragrafo no index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="container-right">
             <h1>WE CARE</h1>
             <h2>About Your Pet</h2>
-            <p>Lorem ipsum dolor sit amet consecteturad cing elit aenean a justo quis mauris hendri pellentesque eget at
+            <p>Lorem ipsum color sit amet consecteturad cing elit aenean a justo quis mauris hendri pellentesque eget at
                 ipsumuis cursusturpi.</p>
             <button class="button-section">EXPLORE</button>
         </section>
