--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>About Your Pet</h2>
             <p>Lorem ipsum color sit amet consecteturad cing elit aenean a justo quis mauris hendri pellentesque eget at
                 ipsumuis cursusturpi.</p>
-            <button class="button-section">Explor</button>
+            <button class="button-section">Explore</button>
         </section>
 
     </div>
